small fix on location pages
- Added feature to avoid horizontal scrolling in location table for low resolutions

Cambios renderizados localmente:


Former-commit-id: 6a4a9ff25bd66020efad4c9b8d82c39c1f8a8b0b

--- a/theme/2014/static/scss/base.scss
+++ b/theme/2014/static/scss/base.scss
@@ -421,6 +421,7 @@ article {
 
 .tb-location-hq {
   left: 14%;
+  overflow-x: hidden;
   position: relative;
   right: 14%;
 
